{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 573,
  "lineage": "3cd53b38-dc42-87aa-2699-a548488058a7",
  "resources": [
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "temporary_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-10-buster-v20231212",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/gd-gcp-internship-devops/zones/us-central1-c/disks/temp-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Unknown CPU Platform",
            "current_status": "TERMINATED",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/gd-gcp-internship-devops/zones/us-central1-c/instances/temp-vm",
            "instance_id": "7374965566319658715",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata": {
              "startup-script": "#! /bin/bash\nsudo apt update\nsudo apt install -y apache2\necho \"\u003chtml\u003e\u003cbody\u003e\u003ch1\u003eA simple website\u003c/h1\u003e\u003c/body\u003e\u003c/html\u003e\" \u003e /var/www/html/index.html\n"
            },
            "metadata_fingerprint": "DHyhRUUOLEw=",
            "name": "temp-vm",
            "network_interface": [
              {
                "access_config": [
                  {
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/gd-gcp-internship-devops/global/networks/md-internship-sp-network",
                "network_ip": "10.0.2.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/gd-gcp-internship-devops/regions/us-central1/subnetworks/md-internship-sp-subnet",
                "subnetwork_project": "gd-gcp-internship-devops"
              }
            ],
            "project": "gd-gcp-internship-devops",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/gd-gcp-internship-devops/zones/us-central1-c/instances/temp-vm",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "web"
            ],
            "tags_fingerprint": "3d9fNIIa_10=",
            "zone": "us-central1-c"
          },
          "dependencies": [
            "module.network.google_compute_network.network",
            "module.network.google_compute_subnetwork.subnetwork"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/gd-gcp-internship-devops/zones/us-central1-c/instanceGroups/md-internship-sp-instance-group",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2024-01-03T02:47:55.290-08:00",
            "enable_cdn": false,
            "fingerprint": "XE4h72LYw_o=",
            "generated_id": 9183181711724807604,
            "health_checks": [
              "projects/gd-gcp-internship-devops/global/healthChecks/tcp-proxy-health-check"
            ],
            "id": "projects/gd-gcp-internship-devops/global/backendServices/l7-xlb-backend-service",
            "load_balancing_scheme": "EXTERNAL",
            "name": "l7-xlb-backend-service",
            "port_name": "http",
            "project": "gd-gcp-internship-devops",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gd-gcp-internship-devops/global/backendServices/l7-xlb-backend-service",
            "session_affinity": "NONE",
            "timeout_sec": 10
          },
          "dependencies": [
            "module.compute.google_compute_image.image",
            "module.compute.google_compute_instance.temporary_instance",
            "module.compute.google_compute_instance_group_manager.instance_group",
            "module.compute.google_compute_instance_template.instance_template",
            "module.lb.google_compute_health_check.default",
            "module.network.google_compute_network.network",
            "module.network.google_compute_subnetwork.subnetwork"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-01-03T02:46:22.263-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/gd-gcp-internship-devops/global/firewalls/tcp-proxy-xlb-fw-allow-hc",
            "log_config": [],
            "name": "tcp-proxy-xlb-fw-allow-hc",
            "network": "https://www.googleapis.com/compute/v1/projects/gd-gcp-internship-devops/global/networks/md-internship-sp-network",
            "priority": 1000,
            "project": "gd-gcp-internship-devops",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gd-gcp-internship-devops/global/firewalls/tcp-proxy-xlb-fw-allow-hc",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "allow-health-check"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/gd-gcp-internship-devops/global/forwardingRules/l7-xlb-forwarding-rule",
            "ip_address": "34.117.12.147",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "l7-xlb-forwarding-rule",
            "port_range": "80-80",
            "project": "gd-gcp-internship-devops",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gd-gcp-internship-devops/global/forwardingRules/l7-xlb-forwarding-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/gd-gcp-internship-devops/global/targetHttpProxies/test-proxy-health-check"
          },
          "dependencies": [
            "module.compute.google_compute_image.image",
            "module.compute.google_compute_instance.temporary_instance",
            "module.compute.google_compute_instance_group_manager.instance_group",
            "module.compute.google_compute_instance_template.instance_template",
            "module.lb.google_compute_backend_service.default",
            "module.lb.google_compute_health_check.default",
            "module.lb.google_compute_target_http_proxy.default",
            "module.lb.google_compute_url_map.default",
            "module.network.google_compute_network.network",
            "module.network.google_compute_subnetwork.subnetwork"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-01-03T02:48:28.975-08:00",
            "id": "projects/gd-gcp-internship-devops/global/targetHttpProxies/test-proxy-health-check",
            "name": "test-proxy-health-check",
            "project": "gd-gcp-internship-devops",
            "proxy_bind": false,
            "proxy_id": 7524755724748490131,
            "self_link": "https://www.googleapis.com/compute/v1/projects/gd-gcp-internship-devops/global/targetHttpProxies/test-proxy-health-check",
            "url_map": "https://www.googleapis.com/compute/v1/projects/gd-gcp-internship-devops/global/urlMaps/l7-xlb-url-map"
          },
          "dependencies": [
            "module.compute.google_compute_image.image",
            "module.compute.google_compute_instance.temporary_instance",
            "module.compute.google_compute_instance_group_manager.instance_group",
            "module.compute.google_compute_instance_template.instance_template",
            "module.lb.google_compute_backend_service.default",
            "module.lb.google_compute_health_check.default",
            "module.lb.google_compute_url_map.default",
            "module.network.google_compute_network.network",
            "module.network.google_compute_subnetwork.subnetwork"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-01-03T02:48:17.326-08:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/gd-gcp-internship-devops/global/backendServices/l7-xlb-backend-service",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "x_kMBmT_MqA=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/gd-gcp-internship-devops/global/urlMaps/l7-xlb-url-map",
            "map_id": 7662017966086063518,
            "name": "l7-xlb-url-map",
            "path_matcher": [],
            "project": "gd-gcp-internship-devops",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gd-gcp-internship-devops/global/urlMaps/l7-xlb-url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.compute.google_compute_image.image",
            "module.compute.google_compute_instance.temporary_instance",
            "module.compute.google_compute_instance_group_manager.instance_group",
            "module.compute.google_compute_instance_template.instance_template",
            "module.lb.google_compute_backend_service.default",
            "module.lb.google_compute_health_check.default",
            "module.network.google_compute_network.network",
            "module.network.google_compute_subnetwork.subnetwork"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/gd-gcp-internship-devops/global/networks/md-internship-sp-network",
            "mtu": 0,
            "name": "md-internship-sp-network",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "gd-gcp-internship-devops",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gd-gcp-internship-devops/global/networks/md-internship-sp-network"
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "md-internship-sp-subnet",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-01-03T02:34:15.717-08:00",
            "gateway_address": "10.0.2.1",
            "id": "projects/gd-gcp-internship-devops/regions/us-central1/subnetworks/md-internship-sp-subnet",
            "ip_cidr_range": "10.0.2.0/24",
            "name": "md-internship-sp-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/gd-gcp-internship-devops/global/networks/md-internship-sp-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "gd-gcp-internship-devops",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gd-gcp-internship-devops/regions/us-central1/subnetworks/md-internship-sp-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.network.google_compute_network.network"
          ]
        }
      ]
    }
  ]
}